tests/invalid/trait/method_call_short_ufcs_generic_struct_literal_receiver_safety_gate.facet
struct Token<T> {
  value: unrestricted T
}

trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted Token<unrestricted isize> {
  fn run(self: Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  (Runner::run Token<unrestricted isize> { value = 1 })
}
